added portfolio frontpage and css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="active.css">
+  </head>
+  <body>
+
+    <nav id="navbar">
+      <ul>
+         <a class="nav-link" href="#welcome-section"><li>Home</li></a>
+          <a class ="nav-link" href="#projects"><li>Projects</li></a>
+          <a class ="nav-link" href="#content"><li>Project Details</li></a>
+            <a class ="nav-link" href="#contact-me"><li>Contact Me</li></a>
+      </ul>
+    </nav>
+
+    <section id="welcome-section">
+      <div id="welcome-header">
+      <img id= "bluemandala" src="https://i.ibb.co/1rVVsmy/mandala-blue-whitebg-copy.png" alt="mandala-blue-whitebg-copy" border="0" />
+       <div id="myname">
+      <h1>Jamila Toaha</h2>
+      <p> Software Developer</p>
+         </div>
+           <img id="pinkmandala" src="https://i.ibb.co/L1yps89/pink-mandala.png" alt="pink-mandala" border="0"/>
+      </div>
+    </section>
+
+    <script src="" async defer></script>
+
+  </body>
+</html>
+
+
+
