added cisc 3610 link & content outline

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
           <a class ="nav-link" href="#projects"><li>Projects</li></a>
-          <a class ="nav-link" href="#content"><li>Project Details</li></a>
+          <a class ="nav-link" href="#cisc3610"><li>CISC 3610</li></a>
             <a class ="nav-link" href="#contact-me"><li>Contact Me</li></a>
       </ul>
     </nav>
@@ -31,6 +31,21 @@
          </div>
            <img id="pinkmandala" src="https://i.ibb.co/L1yps89/pink-mandala.png" alt="pink-mandala" border="0"/>
       </div>
+    </section>
+
+    <section id="cisc3610">
+      <h2>CISC 3610 - Jamila Toaha</h2>
+      <p>jamila.toaha.dev@gmail.com</p>
+
+      <dl>
+        <dt>Projects</dt>
+          <dd>Cartoon</dd>
+          <dd>Animation</dd>
+        <dt>Labs</dt>
+          <dd>Bar Chart</dd>
+          <dd>Animation</dd>
+      </dl>
+
     </section>
 
     <script src="" async defer></script>
