--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
           <a class ="nav-link" href="#projects"><li>Projects</li></a>
           <a class ="nav-link" href="#cisc3610"><li>CISC 3610</li></a>
-            <a class ="nav-link" href="#contact-me"><li>Contact Me</li></a>
+            <a class ="nav-link" href="#about-me"><li>About Me</li></a>
       </ul>
     </nav>
 
@@ -34,15 +34,16 @@
     </section>
 
     <section id="cisc3610">
-      <h2>CISC 3610 - Jamila Toaha</h2>
+      <h2>CISC 3610</h2>
+      <p>Jamila Toaha</p>
       <p>jamila.toaha.dev@gmail.com</p>
 
       <dl>
-        <dt>Projects</dt>
+        <dt>Projects:</dt>
           <dd>Cartoon</dd>
           <dd>Animation</dd>
-        <dt>Labs</dt>
-          <dd>Bar Chart</dd>
+        <dt>Labs:</dt>
+          <dd><a href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart</a></dd>
           <dd>Animation</dd>
       </dl>
 
