added form lab and css update to bar chart lab

--- a/CISC 3610 Labs/lab1-chartlab/index.html
+++ b/CISC 3610 Labs/lab1-chartlab/index.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
+    <nav id="navbar">
+      <ul>
+          <a class="nav-link" href="../../index.html"><li>Home</li></a>
+          <a class ="nav-link" href="#projects"><li>Projects</li></a>
+          <a class ="nav-link" href="../../index.html#cisc3610"><li>CISC 3610</li></a>
+            <a class ="nav-link" href="#about-me"><li>About Me</li></a>
+       </ul>
+    </nav>
+
     <canvas id="myCanvas" height="600" width="600"></canvas>
   </body>
 
