--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <dt>Labs:</dt>
           <dd><a href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart</a></dd>
           <dd>Animation</dd>
+          <dd><a href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
       </dl>
 
     </section>
