added animation lab, updated nav bar across all pages

--- a/CISC 3610 Labs/form lab/index.html
+++ b/CISC 3610 Labs/form lab/index.html
@@ -10,20 +10,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
+    <script type="text/javascript" src="./index.js" defer></script>
   </head>
+
   <body>
 
     <nav id="navbar">
-      <ul>
-          <a class="nav-link" href="../../index.html"><li>Home</li></a>
-          <a class ="nav-link" href="#projects"><li>Projects</li></a>
-          <a class ="nav-link" href="../../index.html#cisc3610"><li>CISC 3610</li></a>
-            <a class ="nav-link" href="#about-me"><li>About Me</li></a>
-       </ul>
+      <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-
-
-
 
     <form id="this-form">
       <p>Form (In Progress)</p>
@@ -48,6 +42,5 @@
       </div>
     </form>
 
-    <script src="index.js" async defer></script>
   </body>
 </html>
