--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="active.css">
   </head>
   <body>
-
     <nav id="navbar">
       <ul>
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
@@ -21,7 +20,9 @@
             <a class ="nav-link" href="#about-me"><li>About Me</li></a>
       </ul>
     </nav>
-
+    <a href= "index.html" >
+      <img id="home-icon" alt="home button" src="./images/home-icon.png" />
+    </a>
     <section id="welcome-section">
       <div id="welcome-header">
       <img id= "bluemandala" src="https://i.ibb.co/1rVVsmy/mandala-blue-whitebg-copy.png" alt="mandala-blue-whitebg-copy" border="0" />
@@ -43,8 +44,8 @@
           <dd>Cartoon</dd>
           <dd>Animation</dd>
         <dt>Labs:</dt>
-          <dd><a href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart</a></dd>
-          <dd>Animation</dd>
+          <dd><a href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed, will add extra features)</a></dd>
+          <dd><a href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
           <dd><a href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
       </dl>
 
