--- a/CISC 3610 Labs/animation lab/index.html
+++ b/CISC 3610 Labs/animation lab/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Animation Lab</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="active.css">
+    <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
-    <script src="" async defer></script>
+    <nav id="navbar">
+         <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
+    </nav>
+    <h1>Animation Lab</h1>
+    <canvas id="myCanvas" height="100" width="100"></canvas>
+    <button id="start-button">Start</button>
+    <label id= "label-colors" for="choose-colors"> Choose Background Color</label>
+    <select onchange="setupColors()" id="choose-colors">
+      <option value='aqua' selected>Aqua</option>
+      <option value='pink'>Pink</option>
+      <option value='lightgray'>Gray</option>
+      <option value='lavender'>Lavender</option>
+      <option value='peachpuff'>Orange</option>
+    </select>
   </body>
 </html>
+
