--- a/CISC 3610 Labs/lab1-chartlab/index.html
+++ b/CISC 3610 Labs/lab1-chartlab/index.html
@@ -7,14 +7,11 @@
   </head>
 
   <body>
+
     <nav id="navbar">
-      <ul>
-          <a class="nav-link" href="../../index.html"><li>Home</li></a>
-          <a class ="nav-link" href="#projects"><li>Projects</li></a>
-          <a class ="nav-link" href="../../index.html#cisc3610"><li>CISC 3610</li></a>
-            <a class ="nav-link" href="#about-me"><li>About Me</li></a>
-       </ul>
+      <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
+
 
     <canvas id="myCanvas" height="600" width="600"></canvas>
   </body>
