added CSS to front page, updated  project dl view

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <p>Jamila Toaha</p>
       <p>jamila.toaha.dev@gmail.com</p>
 
-      <dl>
+      <dl id="project-list-3610">
         <dt>Projects:</dt>
           <dd>Cartoon</dd>
           <dd>Animation</dd>
         <dt>Labs:</dt>
-          <dd><a href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed, will add extra features)</a></dd>
-          <dd><a href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
-          <dd><a href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed, will add extra features)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
       </dl>
 
     </section>
