updated css for links, & added Github Links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>CISC 3610</h2>
       <p>Jamila Toaha</p>
       <p>jamila.toaha.dev@gmail.com</p>
-
+      <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
       <dl id="project-list-3610">
         <dt>Projects:</dt>
           <dd>Cartoon</dd>
