updated form lab css + added undo functionality

--- a/CISC 3610 Labs/form lab/index.html
+++ b/CISC 3610 Labs/form lab/index.html
@@ -20,10 +20,10 @@
     </nav>
 
     <form id="this-form">
-      <p>Form (In Progress)</p>
+      <p>Lab: Form</p>
       <label for="title">Title:</label>
       <br>
-      <input id="title" type="text" maxlength="40" onChange="setTitle()" placeholder="Enter a title"
+      <input id="title" type="text" maxlength="40" oninput="setTitle()" placeholder="Enter a title"
       required>
       <br>
       <br>
