added starter about me page with pic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
           <a class ="nav-link" href="#projects"><li>Projects</li></a>
           <a class ="nav-link" href="#cisc3610"><li>CISC 3610</li></a>
-            <a class ="nav-link" href="#about-me"><li>About Me</li></a>
+          <a class ="nav-link" href="aboutme.html"><li>About Me</li></a>
       </ul>
     </nav>
     <a href= "index.html" >
