added to cartoon project start

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
       <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
       <dl id="project-list-3610">
         <dt>Projects:</dt>
-          <dd>Cartoon</dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (In Progress)</a></dd>
           <dd>Animation</dd>
+          <dd>Data Visualization</dd>
         <dt>Labs:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed, will add extra features)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
