--- a/CISC 3610 Projects/Cartoon Project/index.html
+++ b/CISC 3610 Projects/Cartoon Project/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="active.css">
     <script type="text/javascript" src="index.js" ></script> </head>
   <body>
+    <nav id="navbar">
+      <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
+    </nav>
     <h1>Title PlaceHolder</h1>
     <canvas id="my-canvas" width=1100 height=500></canvas>
 
