--- a/CISC 3610 Projects/Cartoon Project/index.html
+++ b/CISC 3610 Projects/Cartoon Project/index.html
@@ -13,7 +13,7 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-    <h1>Title PlaceHolder</h1>
+    <h1>sakura mornings</h1>
     <canvas id="my-canvas" width=1100 height=500></canvas>
 
   </body>
