updated status for Lab 1 on main page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <dd>Animation</dd>
           <dd>Data Visualization</dd>
         <dt>Labs:</dt>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed, will add extra features)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
       </dl>
