--- a/CISC 3610 Projects/Animation Project/index.html
+++ b/CISC 3610 Projects/Animation Project/index.html
@@ -13,8 +13,8 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-    <h1>house by the seaside</h1>
-    <canvas id="my-canvas" width=1100 height=500></canvas>
+    <h1>animation</h1>
+    <canvas id="my-canvas" width=1200 height=550></canvas>
 
   </body>
 </html>
