--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <dl id="project-list-3610">
         <dt>Projects:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (In Progress)</a></dd>
-          <dd>Animation</dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
           <dd>Data Visualization</dd>
+          <dd>Game</dd>
         <dt>Labs:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
