added storyline caption and powerpuff girls and cat with attitude walking

--- a/CISC 3610 Projects/Animation Project/index.html
+++ b/CISC 3610 Projects/Animation Project/index.html
@@ -13,8 +13,8 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-    <h1>animation</h1>
+    <h1>animation: heroes waiting ground</h1>
     <canvas id="my-canvas" width=1200 height=550></canvas>
-
+    <p>In a future where Titans have been eliminated, the Scout Regiment has been reduced to high end window washers at a heroes waiting ground, where heroes assigned missions rush off to save the day, and other heroes anxiously wait around to receive a mission. </p>
   </body>
 </html>
