updated list of assignments

--- a/index.html
+++ b/index.html
@@ -44,11 +44,17 @@
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (In Progress)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
           <dd>Data Visualization</dd>
-          <dd>Game</dd>
+          <dd>Phaser: Game Project</dd>
+          <dd>Audio Project </dd>
+
         <dt>Labs:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
+          <dd><a class="project-link-3610" href="">Phaser Drag and Drop Lab</a></dd>
+          <dd><a class="project-link-3610" href="">Resume Lab</a></dd>
+          <dd><a class="project-link-3610" href="">Audio Lab</a></dd>
+          <dd><a class="project-link-3610" href="">Video Lab</a></dd>
       </dl>
 
     </section>
