--- a/CISC 3610 Labs/phaser lab/index.html
+++ b/CISC 3610 Labs/phaser lab/index.html
@@ -2,6 +2,9 @@
 
 <html>
   <head>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/4.0.0-alpha.3/phaser.min.js" ></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="active.css">
     <script type="text/javascript" src="index.js"></script>
   </head>
@@ -12,9 +15,9 @@
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
 
-<div id="flex">
-    <canvas id="myCanvas" height="600" width="600"></canvas>
-
+<div id="phaser-example">
+    <canvas height="600" width="600"></canvas>
+</div>
 
 </body>
 
