linked Phaser Lab to home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
-          <dd><a class="project-link-3610" href="">Phaser Drag and Drop Lab</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Drag and Drop Lab</a></dd>
           <dd><a class="project-link-3610" href="">Resume Lab</a></dd>
           <dd><a class="project-link-3610" href="">Audio Lab</a></dd>
           <dd><a class="project-link-3610" href="">Video Lab</a></dd>
