phaser drag and drop picnic lab completed

--- a/CISC 3610 Labs/phaser lab/index.html
+++ b/CISC 3610 Labs/phaser lab/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <title> Lab: Phaser - Drag and Drop- Jamila Toaha</title>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/4.0.0-alpha.3/phaser.min.js" ></script> -->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -14,7 +15,7 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-
+<h1>Lab: Phaser - Drag and Drop Picnic (Completed)</h1>
 <div id="phaser-example">
 </div>
 
