fixed undo function of form lab

--- a/CISC 3610 Labs/form lab/index.html
+++ b/CISC 3610 Labs/form lab/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Forms Lab</title>
+    <title>Lab: Form- Jamila Toaha</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
@@ -20,7 +20,7 @@
     </nav>
 
     <form id="this-form">
-      <p>Lab: Form</p>
+      <p>Lab: Form - Local Storage</p>
       <label for="title">Title:</label>
       <br>
       <input id="title" type="text" maxlength="40" oninput="setTitle()" placeholder="Enter a title"
@@ -41,6 +41,7 @@
         <button id="submit-button" type="submit">Submit</button>
       </div>
     </form>
+    <p> This form implements local storage. When a user refreshes or comes back to a page at a later time, unless cache is cleared, the user will be able to see what they wrote at an earlier time</p>
 
   </body>
 </html>
