updated titles, and updated page icons with personalized logo

--- a/CISC 3610 Labs/animation lab/index.html
+++ b/CISC 3610 Labs/animation lab/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Animation Lab</title>
+    <title>Animation Lab - Jamila Toaha</title>
+    <link rel="icon" href="../../images/my-logo-black.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
@@ -14,7 +15,7 @@
     <nav id="navbar">
          <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-    <h1>Animation Lab</h1>
+    <h1>Animation Lab: 0-10</h1>
     <canvas id="myCanvas" height="100" width="100"></canvas>
     <button id="start-button">Start</button>
     <label id= "label-colors" for="choose-colors"> Choose Background Color</label>
