--- a/CISC 3610 Labs/lab1-chartlab/index.html
+++ b/CISC 3610 Labs/lab1-chartlab/index.html
@@ -2,6 +2,8 @@
 
 <html>
   <head>
+    <title>Lab: Fruit Bars Chart - Jamila Toaha</title>
+    <link rel="icon" href="../../images/my-logo-black.png">
     <link rel="stylesheet" href="active.css">
     <script type="text/javascript" src="./chartlab.js"></script>
   </head>
