--- a/CISC 3610 Projects/Animation Project/index.html
+++ b/CISC 3610 Projects/Animation Project/index.html
@@ -2,6 +2,8 @@
 
  <html >
   <head>
+    <title>animation: heroes waiting ground by jamila toaha</title>
+    <link rel="icon" href="../../images/my-logo-black.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
@@ -15,6 +17,6 @@
     </nav>
     <h1>animation: heroes waiting ground</h1>
     <canvas id="my-canvas" width=1200 height=550></canvas>
-    <p>In a future where Titans have been eliminated, the Scout Regiment has been reduced to high end window washers at a heroes waiting ground, where heroes assigned missions rush off to save the day, and other heroes anxiously wait around to receive a mission. </p>
+    <p>In a future where Titans have been eliminated, Scout Regiment members have been reduced to high end window washers at a heroes waiting ground, where heroes assigned missions rush off to save the day, and other heroes wait around to receive a mission. </p>
   </body>
 </html>
