--- a/CISC 3610 Labs/form lab/index.html
+++ b/CISC 3610 Labs/form lab/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Lab: Form- Jamila Toaha</title>
+    <link rel="icon" href="../../images/my-logo-black.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
