--- a/CISC 3610 Labs/phaser lab/index.html
+++ b/CISC 3610 Labs/phaser lab/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title> Lab: Phaser - Drag and Drop- Jamila Toaha</title>
+    <link rel="icon" href="../../images/my-logo-black.png">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/4.0.0-alpha.3/phaser.min.js" ></script> -->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
