--- a/CISC 3610 Projects/Cartoon Project/index.html
+++ b/CISC 3610 Projects/Cartoon Project/index.html
@@ -2,6 +2,8 @@
 
  <html >
   <head>
+    <title>Cartoon Project: house by the seaside by Jamila Toaha</title>
+    <link rel="icon" href="../../images/my-logo-black.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
@@ -13,7 +15,7 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-    <h1>house by the seaside</h1>
+    <h1>Cartoon Project: "house by the seaside"</h1>
     <canvas id="my-canvas" width=1100 height=500></canvas>
 
   </body>
