--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Jamila Toaha's Portfolio</title>
+    <link rel="icon" href="images/my-logo-black.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
@@ -43,15 +44,15 @@
         <dt>Projects:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (In Progress)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
-          <dd>Data Visualization</dd>
-          <dd>Phaser: Game Project</dd>
-          <dd>Audio Project </dd>
+          <dd><a class="project-link-3610" href="">Data Visualization</a></dd>
+          <dd><a class="project-link-3610" href="">Phaser: Game Project</a></dd>
+          <dd><a class="project-link-3610" href="">Audio Project </a></dd>
 
         <dt>Labs:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (in progress)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Drag and Drop Lab(Completed)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (Completed)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Drag and Drop Lab (Completed)</a></dd>
           <dd><a class="project-link-3610" href="">Resume Lab</a></dd>
           <dd><a class="project-link-3610" href="">Audio Lab</a></dd>
           <dd><a class="project-link-3610" href="">Video Lab</a></dd>
