--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Drag and Drop Lab (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab (Completed)</a></dd>
           <dd><a class="project-link-3610" href="">Audio Lab</a></dd>
           <dd><a class="project-link-3610" href="">Video Lab</a></dd>
       </dl>
