starter voice recognition project added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
           <dd><a class="project-link-3610" href="">Data Visualization</a></dd>
           <dd><a class="project-link-3610" href="">Phaser: Game Project</a></dd>
-          <dd><a class="project-link-3610" href="">Audio Project </a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Audio Project </a></dd>
 
         <dt>Labs:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
