updated  voice recognition css

--- a/CISC 3610 Projects/AudioProject/index.html
+++ b/CISC 3610 Projects/AudioProject/index.html
@@ -24,13 +24,13 @@
     <div id="text">
       <h3>Instructions</h3>
       <p>Press the button and say any of the following commands. Once you are done, you can stop the speak button by clicking on it. Alternatively, if the program detects a pause it will stop it for you. </p>
-      <p>Say "color _____" to change the color of the circle. For example "color blue" to make the circle blue.</p>
-      <p>Say "background _____" to change the background color of the canvas. For example "background yellow" to make the background yellow.
+      <p><span class="say">Say "color _____" to change the color of the circle.</span>For example "color blue" to make the circle blue.</p>
+      <p><span class="say">Say "background _____" to change the background color of the canvas.</span> For example "background yellow" to make the background yellow.
       </p>
-      <p>Say "size _____" to change the size of the circle. For example "size 50" to make the circle with a diameter of 50.
+      <p><span class="say">Say "size _____" to change the size of the circle.</span> For example "size 50" to make the circle with a diameter of 50.
       </p>
-      <p>Say "Help", if you need audio instructions</p>
-      <p>Say "About", if you'd like to hear more about the this program and the developer behind it.</p>
+      <p><span class="say">Say "Help", if you need audio instructions</span></p>
+      <p><span class="say">Say "About", if you'd like to hear more about this program and the developer behind it.</span></p>
       <button onclick="toggleSpeechButton()" id="speak-button">Speak</button>
     </div>
 
