home page - updated link to include video lab

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Drag and Drop Lab (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Labs/audio-lab/index.html">Audio Lab (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="">Video Lab</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/video-lab/index.html">Video Lab</a></dd>
       </dl>
 
     </section>
