updated css for video lab

--- a/CISC 3610 Labs/video-lab/index.html
+++ b/CISC 3610 Labs/video-lab/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="active.css">
     <script type="text/javascript" src="main.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@800&family=Nosifer&family=Press+Start+2P&family=Roboto:wght@500&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -18,19 +19,32 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-    <h1>Video Lab: Fun Science</h1>
+
+  <div id="header-section">
+    <p>Video Lab: Fun Science</p>
+    <img src='dexter.png'>
+  </div>
+
+  <div id="video-content">
+
+  <div class="video-and-caption">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/zV1hTZTI18I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Amazing footage of a water droplet filmed in ultra-slow-motion at 2000 frames per second.</p>
+    </div>
 
+    <div class="video-and-caption">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ndlQNicOeso" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <p>The midnight sun is a natural phenomenon occurring in summer months at latitudes north and nearby to the south of the Arctic Circle, and south and nearby to the north of the Antarctic Circle where the sun remains visible at the local midnight. Given fair weather, the sun is visible for a continuous 24 hours, mostly north of the Arctic Circle and south of the Antarctic Circle. The number of days per year with potential midnight sun increases the farther poleward one goes.
 
       The opposite phenomenon, polar night, occurs in winter when the sun stays below the horizon throughout the day.</p>
+      </div>
 
-
+      <div class="video-and-caption">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/esfpcnQW6qs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Description: In November, 1940, the newly completed Tacoma Narrows Bridge, opened barely four months before, swayed and collapsed in a 42 mile-per-hour wind. There were no casualties except a dog trapped in a car stranded on the bridge. A rescue was attempted (by the man with the pipe), but the frightened animal would not leave the car. The site was declared a National Historic Landmark to discourage relic seekers and salvage operations. This file is a composite of the good quality Internet Archive file and the soundtrack of a poor quality (heavily scratched and filled with abrasions)</p>
+</div>
+</div>
 
     </body>
 </html>
