--- a/CISC 3610 Projects/DataVisualizationProject/index.html
+++ b/CISC 3610 Projects/DataVisualizationProject/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Animation Lab - Jamila Toaha</title>
+    <title>Data Visualization Project - Jamila Toaha</title>
     <link rel="icon" href="../../images/my-logo-black.png">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
-    <script type="text/javascript" src="main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="main.js" defer></script>
 
     <!-- chart.js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
   </head>
   <body>
 
@@ -20,6 +21,7 @@
          <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
     <h1>Data Visualization Project</h1>
-    <canvas id="myChart"></canvas>
+    <!-- <canvas id="myChart"></canvas> -->
+    <canvas id="bar-chart" width="600" height="350"></canvas>
   </body>
   </html>
