--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <dt>Projects:</dt>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (In Progress)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Voice Recognition Project (Completed) </a></dd>
 
