--- a/CISC 3610 Projects/PhaserProject/index.html
+++ b/CISC 3610 Projects/PhaserProject/index.html
@@ -8,7 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="active.css">
+
+
     <script type="text/javascript" src="main.js" defer></script>
+    <script src="scripts/GlobalVariables.js"></script>
+    <script src="scripts/Preload.js"></script>
+    <script src="scripts/MainMenu.js"></script>
+    <script src="scripts/GamePlay.js"></script>
   </head>
 
   <body>
