--- a/CISC 3610 Projects/PhaserProject/index.html
+++ b/CISC 3610 Projects/PhaserProject/index.html
@@ -22,10 +22,19 @@
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
     </nav>
-<h1>Game Project using Phaser Jamila Toaha</h1>
-<div id="phaser-example">
-</div>
+<h1>Game Project using Phaser</h1>
+<script>
+  //On page load, create game config
+  var config = {
+    type: Phaser.AUTO,
+    width: 1100,
+    height: 550,
+    scene: myGame.scenes
+  };
 
+  //Instantiate the game with the config
+  var game = new Phaser.Game(config);
+</script>
 </body>
 
 </html>
