--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
       <dl id="project-list-3610">
         <dt>Projects:</dt>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (In Progress)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project (Completed)</a></dd>
           <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Voice Recognition Project (Completed) </a></dd>
 
         <dt>Labs:</dt>
