file structure updated: moved JSONs to a seperate JS file

--- a/CISC 3610 Projects/Animation Project/index.html
+++ b/CISC 3610 Projects/Animation Project/index.html
@@ -10,7 +10,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
-    <script type="text/javascript" src="index.js" ></script> </head>
+    <script type="text/javascript" src="spriteSheetJSONs.js" defer ></script>
+    <script type="text/javascript" src="index.js" defer ></script> </head>
   <body>
     <nav id="navbar">
       <a href="../../index.html"><img id="home-icon" alt="home button" src="../../images/home-icon.png" /></a>
