--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
       <p>jamila.toaha.dev@gmail.com</p>
       <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
       <dl id="project-list-3610">
-        <dt>Projects:</dt>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation (In Progress)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Voice Recognition Project (Completed) </a></dd>
+        <dt>Projects: (Completed)</dt>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon — ("house by the seaside")</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation — ("heroes waiting ground")</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization — (Water Consumption History/ Urban Agriculture lots)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project — (Rescue Ops)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Voice Recognition Project — (Uses Web Speech API) </a></dd>
 
-        <dt>Labs:</dt>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Drag and Drop Lab (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/audio-lab/index.html">Audio Lab (Completed)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/video-lab/index.html">Video Lab (Completed)</a></dd>
+        <dt>Labs: (Completed)</dt>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart — (Fruit Bars/ extra features added)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation — (0-10 Spritesheet Animation/  extra features added)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form — (Implements Local Storage)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Lab — (Drag and Drop Picnic)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab — (using Start Bootstrap)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/audio-lab/index.html">Audio Lab — (Retro Boom Box)</a></dd>
+          <dd><a class="project-link-3610" href="CISC 3610 Labs/video-lab/index.html">Video Lab — (Fun Science)</a></dd>
       </dl>
 
     </section>
