added Computer Graphics codepens to homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <section id="cisc3610">
-      <h2>CISC 3610</h2>
+      <h2>CISC 3610: Introduction to Multimedia Programming</h2>
       <p>Jamila Toaha</p>
       <p>jamila.toaha.dev@gmail.com</p>
       <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
@@ -59,6 +59,55 @@
       </dl>
 
     </section>
+
+    <section id="cisc3620">
+      <h2>CISC 3620: Computer Graphics Projects</h2>
+
+      <div>
+        <p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="XWbZyJx" style="height: 600px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="V2 Obelisk  Three.js">
+          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/XWbZyJx">
+          V2 Obelisk  Three.js</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+      </div>
+
+      <div>
+      <p class="codepen" data-height="550" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="xxGPdzv" style="height:500px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Clown">
+        <span>See the Pen <a href="https://codepen.io/jtoaha/pen/xxGPdzv">
+        Clown</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
+        on <a href="https://codepen.io">CodePen</a>.</span>
+      </p>
+      <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+      </div>
+
+      <div>
+        <p class="codepen" data-height="550" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="gOaMKpX" style="height: 550px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Lit Scene">
+          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/gOaMKpX">
+          Lit Scene</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+      </div>
+
+      <div>
+        <p class="codepen" data-height="550" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="LYpWdgx" style="height: 550px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Textured barn">
+          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/LYpWdgx">
+          Textured barn</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+      </div>
+
+      <div>
+        <p class="codepen" data-height="700" data-theme-id="dark" data-default-tab="js,result" data-user="jtoaha" data-slug-hash="GRpdwNE" style="height: 700px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="HW6 --- Hepta3star">
+          <span>See the Pen <a href="https://codepen.io/jtoaha/pen/GRpdwNE">
+          HW6 --- Hepta3star</a> by Jamila (<a href="https://codepen.io/jtoaha">@jtoaha</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+      </div>
+      </section>
 
     <script src="" async defer></script>
 
