--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="active.css">
+
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav id="navbar">
       <ul>
          <a class="nav-link" href="#welcome-section"><li>Home</li></a>
-          <a class ="nav-link" href="#projects"><li>Projects</li></a>
-          <a class ="nav-link" href="#cisc3610"><li>CISC 3610</li></a>
-          <a class ="nav-link" href="aboutme.html"><li>About Me</li></a>
+          <a class ="nav-link" href="#resume"><li>Resumé</li></a>
+          <a class ="nav-link" href="#portfolio-br"><li>Portfolio</li></a>
+          <a class ="nav-link" href="aboutme.html"><li>Contact Me</li></a>
       </ul>
     </nav>
     <a href= "index.html" >
@@ -28,12 +35,38 @@
       <div id="welcome-header">
       <img id= "bluemandala" src="https://i.ibb.co/1rVVsmy/mandala-blue-whitebg-copy.png" alt="mandala-blue-whitebg-copy" border="0" />
        <div id="myname">
-      <h1>Jamila Toaha</h2>
+      <h1>Jamila Toaha</h1>
       <p> Software Developer</p>
          </div>
            <img id="pinkmandala" src="https://i.ibb.co/L1yps89/pink-mandala.png" alt="pink-mandala" border="0"/>
       </div>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/jamila-toaha">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/jtoaha">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://twitter.com/jamilaNYC">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://facebook.com/jamilaNYC">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </div>
     </section>
+
+    <br id="portfolio-br">
+    <br>
+    <br>
+    <br>
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <p>Hello there! My name is Jamila.
+        I am an aspiring Software Developer with a strong interest in the intersection of programming, math and art. I am currently working on completing my Multimedia Computing, B.S. degree with minors in Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
+        Below are some projects I've worked on: </p>
+    </section>
+
 
     <section id="cisc3610">
       <h2>CISC 3610: Introduction to Multimedia Programming</h2>
