--- a/index.html
+++ b/index.html
@@ -62,36 +62,44 @@
     <br>
     <section id="portfolio">
       <h2>Portfolio</h2>
+
+      <div id="portfolio-content">
       <p>Hello there! My name is Jamila.
         I am an aspiring Software Developer with a strong interest in the intersection of programming, math and art. I am currently working on completing my Multimedia Computing, B.S. degree with minors in Film and New York City Studies at Brooklyn College. Should be done by the end of 2020!
         Below are some projects I've worked on: </p>
+
+        <section id="cisc3610">
+          <h2>CISC 3610: Introduction to Multimedia Programming</h2>
+          <!-- <p>Jamila Toaha</p>
+          <p>jamila.toaha.dev@gmail.com</p> -->
+          <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
+          <dl id="project-list-3610">
+            <dt>Projects: (Completed)</dt>
+              <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon — ("house by the seaside")</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation — ("heroes waiting ground")</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization — (Water Consumption History/ Urban Agriculture lots)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project — (Rescue Ops)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Voice Recognition Project — (Uses Web Speech API) </a></dd>
+
+            <dt>Labs: (Completed)</dt>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart — (Fruit Bars/ extra features added)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation — (0-10 Spritesheet Animation/  extra features added)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form — (Implements Local Storage)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Lab — (Drag and Drop Picnic)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab — (using Start Bootstrap)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/audio-lab/index.html">Audio Lab — (Retro Boom Box)</a></dd>
+              <dd><a class="project-link-3610" href="CISC 3610 Labs/video-lab/index.html">Video Lab — (Fun Science)</a></dd>
+          </dl>
+
+        </div>
+        </section>
+
+
+
     </section>
 
 
-    <section id="cisc3610">
-      <h2>CISC 3610: Introduction to Multimedia Programming</h2>
-      <p>Jamila Toaha</p>
-      <p>jamila.toaha.dev@gmail.com</p>
-      <p>Source Code: <a href="https://github.com/jtoaha/jtoaha.github.io">https://github.com/jtoaha/jtoaha.github.io</a></p>
-      <dl id="project-list-3610">
-        <dt>Projects: (Completed)</dt>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/Cartoon Project/index.html">Cartoon — ("house by the seaside")</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/Animation Project/index.html">Animation — ("heroes waiting ground")</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/DataVisualizationProject/index.html">Data Visualization — (Water Consumption History/ Urban Agriculture lots)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/PhaserProject/index.html">Phaser: Game Project — (Rescue Ops)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Projects/AudioProject/index.html">Voice Recognition Project — (Uses Web Speech API) </a></dd>
 
-        <dt>Labs: (Completed)</dt>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/lab1-chartlab/index.html">Bar Chart — (Fruit Bars/ extra features added)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/animation lab/index.html">Animation — (0-10 Spritesheet Animation/  extra features added)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/form lab/index.html">Form — (Implements Local Storage)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/phaser lab/index.html">Phaser Lab — (Drag and Drop Picnic)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/resume lab/index.html">Resume Lab — (using Start Bootstrap)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/audio-lab/index.html">Audio Lab — (Retro Boom Box)</a></dd>
-          <dd><a class="project-link-3610" href="CISC 3610 Labs/video-lab/index.html">Video Lab — (Fun Science)</a></dd>
-      </dl>
-
-    </section>
 
     <section id="cisc3620">
       <h2>CISC 3620: Computer Graphics Projects</h2>
@@ -141,6 +149,71 @@
         <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
       </div>
       </section>
+
+
+      <section id="fcc">
+        <h2>Free Code Camp Projects</h2>
+
+      </section>
+
+      <section id="content">
+        <br/>
+      <br/>
+      <br/>
+      <h2>CISC 1600: Intro to Multimedia Computing</h2>
+      <div class="project-content"   id="littlered-content">
+        <h3>Little Red</h3>
+        <a target="_blank" href="">Link to Project-Will Update</a>
+        <br>
+        <img src="https://i.ibb.co/yFJYN12/little-red-gameplay-gif.gif" alt="little-red-gameplay-gif" border="0">
+
+        <p>
+          Developed a mini-game with the visual programming language Scratch. Little Red goes on missions to save the day. Implemented movement, obstacle, win & loss condition, and other details. Teleportation access points more or less original concept. As of now, excluding start and instructions screens, gameplay is one level. Most graphics borrowed here, aside from a bit of tweaking.
+        </p>
+      </div>
+
+      <div class="project-content"   id="geometricartshow-content">
+        <h3>Geometric Art Show</h3>  <div id="geoexamples">
+        <img src="https://i.ibb.co/1rVVsmy/mandala-blue-whitebg-copy.png" alt="mandala-blue-whitebg-copy" border="0">
+        <img src="https://i.ibb.co/M1VsHD8/outer-16-pink.png" alt="outer-16-pink" border="0">
+        <img src="https://i.ibb.co/L1yps89/pink-mandala.png" alt="pink-mandala" border="0">
+        </div>
+        <p>
+          Developed an art show using the agent-based programming language NetLogo. Program generates mesmerizing shapes and patterns, depending on mode selected (mandala, parallel lines, seed of life), number of agents, and other factors.</p>
+      </div>
+
+      <div class="project-content"   id="starkingdom-content">
+        <h3>Star Kingdom</h3>
+        <a target="_blank" href="">Link to Project-To Update</a>
+        <br>
+        <img src="https://i.ibb.co/wcQVGT3/star-kingdom-recording-1.gif" alt="star-kingdom-recording-1" border="0">
+        <p>Developed a mini-game with the Java-based programming language for artists called Processing. Luna collects star meteorite crystals for fuel for the Star Kingdom. Graphics aside from the moon and the logo created from Processing scratch (via the draw functions). Luna, as well, as irridiscent stars created using coordinate-based geometry, overlapping shapes, and colors that change.
+        </p>
+      </div>
+
+      <h2>Grace Hopper Program at Fullstack Academy</h2>
+    <div class="project-content"   id="card-content">
+        <h3>c-AR-d</h3>
+        <a target="_blank" href="http://c-ar-d-server.herokuapp.com/about">http://c-ar-d-server.herokuapp.com/about</a>
+      <br>
+      <img src="https://i.ibb.co/hHq4Xv1/c-ARd-pics.png" alt="c-ARd-pics" border="0">
+      <p>
+        Senior capstone team project for the Grace Hopper program. Pair programming and agile development practices utilized. cARd has a web app (users generate card) and a mobile app(recepients scan their card to view in AR/VR, can see video pop up). Info stored/retreived, respectively, to/from S3/AWS.
+    <li> Worked as a team to take care of details, though primarily assisted with implementing the QR Scanner into our react native mobile app, Google OAuth login into our web app, and on having video retrieved and displayed in AR/VR (using ViroReact) when cARd scanned with mobile app.</li>
+      </p>
+      </div>
+
+      <div class="project-content"   id="venusflytrap-content">
+        <h3>Venus Fly Trap</h3>
+        <a target="_blank" href="http://venus-fly-trap.herokuapp.com/">http://venus-fly-trap.herokuapp.com</a>
+        <img src="https://i.ibb.co/7JyB4qm/Screen-Shot-2020-01-16-at-1-40-28-AM.png" alt="Screen-Shot-2020-01-16-at-1-40-28-AM" border="0">
+        <p>
+          Built a (dummy) e-commerce website with a team. The website was built using Javascript, React and CSS. Worked as a team to take care of details, though primarily assisted with setting up Heroku deployment, integrating Google OAuth login, and implementing payment with Stripe.
+        </p>
+      </div>
+
+
+    </section>
 
     <script src="" async defer></script>
 
